2002-09-22  Peter Osterlund  <petero2@telia.com>

	* (p4-print-with-rev-history-int): Tiny optimization. Only compute
	  variable values if they are going to be used.

2002-09-07  Peter Osterlund  <petero2@telia.com>

	* (p4-print-with-rev-history-int): Truncate long user names.

2002-08-29  Peter Osterlund  <petero2@telia.com>

	* (p4-toggle-read-only): Updated docstring to match new "C-xC-q"
	  handling from 2002-08-25.

	* (p4-print-with-rev-history-int): Fixed regexp to work with long
	  user names.

	* (p4-next-change-rev-line, p4-prev-change-rev-line): Fix to work
	  with new format of print-with-rev-history buffers.

	* (p4-moveto-print-rev-column): New function.

	* (p4-print-with-rev-history-int): Removed debug message. Made the
	  number of added characters a multiple of 8 to avoid messing up
	  indentation for lines containing tabs.

2002-08-28  Peter Osterlund  <petero2@telia.com>

	* (p4-print-with-rev-history-int): Declare local variable cur-list.
	* (p4-blame): Fixed typo.

2002-08-25  Peter Osterlund  <petero2@telia.com>

	Handle "C-xC-q" using a minor mode keymap instead of modifying the
	global map. This lets p4.el coexist happily with "vc" without
	special hacks.
	* (p4-minor-map): New keymap.
	* (p4-async-minor-mode): Renamed from p4-minor-mode.
	* (p4-require-vc-p, p4-prev-toggle-fkn,
	  substitute-key-definition): Removed.

2002-08-24  Peter Osterlund  <petero2@telia.com>

	* (p4-prev-toggle-fkn, p4-exec-p4, substitute-key-definition): Do
	  not autoload. Autoloading causes unnecessary overhead for those
	  not using p4.el without really helping those who do use it.

2002-08-05  Rajesh Vaidheeswarran  <rv@dsmit.com>

	* (p4-print-with-rev-history-int): Add Date and Author
	* (p4-blame): Add Date and Author (but it doesn't seem to work!)

2002-08-02  Peter Osterlund  <petero2@telia.com>

	* (p4-diff2): When invoking p4-diff2 interactively, default to
	  showing the differences between the current rev and rev# minus
	  one.
