@@ -1,5 +1,9 @@
 2002-09-22  Peter Osterlund  <petero2@telia.com>
 
+	* (p4-resolve): If you switched directory to a different depot,
+	  p4-resolve didn't work until you manually killed the
+	  *p4 resolve* buffer.
+
 	* (p4-print-with-rev-history-int): Tiny optimization. Only compute
 	  variable values if they are going to be used.
 
